# Stable-Organoboronates-ML-Supp

./: LICENSE  README.md  README_CN.md  main.py  pyproject.toml  requirements.txt
demo/: demo.py
example/: SVR_feature_selection.ipynb  data.CSV  data_round2.csv  data_round2_all.csv  data_validation_mean.csv  data_validation_weighted_mean.csv  example.ipynb  example_pic.ipynb  final_with_y_pred_mean.csv  final_with_y_pred_weighted_mean.csv  model_feature_filter.py  model_pic.csv  prediction.ipynb  prediction_round2.ipynb  validation.csv  validation_data.csv
src/: evaluate_and_plot.py  feature_correlation_analysis.py  feature_filter.py  feature_importance_analysis.py  feature_selection.py  hyperparameter_optimization_and_training.py  iterative_optimization.py  leave_one_out_validation.py  logger_config.py  train_and_evaluate.py  validation_process.py  visualization.py
